# ironnest

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE.previous.md  README.md  bootstrap.sh
browser-intent/: .env.example  ARCHITECTURE.md  Dockerfile.infisical-cli  Dockerfile.mcp  Dockerfile.worker  README.md  docker-compose.yml  start.sh
hermes/: .env.example  Dockerfile  build.sh  docker-compose.yml  start.sh  with-infisical.sh
hermes-platform/: .env.example  .gitignore  ARCHITECTURE.md  README.md  build.sh  docker-compose.yml  hermes-profile-entrypoint.sh  start.sh  with-infisical.sh
hermes-platform/gateway/: Dockerfile  pyproject.toml  requirements.txt
hermes-platform/gateway/app/: __init__.py  audit.py  auth.py  config.py  logging.json  main.py  namespace.py  openviking_client.py  policy.py  policy_loader.py  ratelimit.py  registry.py
hermes-platform/gateway/app/routes/: admin.py  health.py  memory.py
hermes-platform/gateway/tests/: conftest.py  test_auth.py  test_integration.py  test_namespace.py  test_openviking_client.py  test_policy.py
monitoring/: .env.example  .gitignore  Dockerfile.container-sync  Dockerfile.filebeat  Dockerfile.fluent-bit  container-sync.sh  docker-compose.yml  fluent-bit.conf
openclaw/: .env.example  Dockerfile.infisical-cli  Dockerfile.openclaw  docker-compose.yml  reauth-codex.sh  start.sh
ops/: autostart.ps1  backup-runtime.sh  backup.sh  check-prereqs.sh  fix-hermes-egress.sh  fix-nat-prerouting.sh  fix-openclaw-egress.sh  inspect-memory.ps1  ironnest-browse.compose.yml  launch-rancher-desktop.ps1  restore.sh  (+2 more)
(+203 files in other folders)
